--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-calendar": "^5.1.0",
     "react-date-range": "^1.1.3",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
